added rainbow delimiters

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "submodules/git-modes"]
 	path = submodules/git-modes
 	url = git@github.com:magit/git-modes.git
+[submodule "submodules/rainbow-delimiters"]
+	path = submodules/rainbow-delimiters
+	url = https://github.com/Fanael/rainbow-delimiters.git
